--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
 
 djangoframe/venv_private_diary/private_diary/media/IMG_1552.JPG
 djangoframe/venv_private_diary/private_diary/media/IMG_1576.JPG
+djangoframe/venv_private_diary/private_diary/media/IMG_0158.JPG
+djangoframe/venv_private_diary/private_diary/media/IMG_0167.JPG
+djangoframe/venv_private_diary/private_diary/media/IMG_0170.PNG
