仮想環境 private_diary 日記削除機能

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@ djangoframe/venv_private_diary/private_diary/media/IMG_1576.JPG
 djangoframe/venv_private_diary/private_diary/media/IMG_0158.JPG
 djangoframe/venv_private_diary/private_diary/media/IMG_0167.JPG
 djangoframe/venv_private_diary/private_diary/media/IMG_0170.PNG
+webApplication(django)/DiaryList(VM)/venv_private_diary/private_diary/media/IMG_1543.JPG
+*.JPG
